--- a/packages/react-pdf-js-viewer/src/style.css
+++ b/packages/react-pdf-js-viewer/src/style.css
@@ -1,8 +1,4 @@
-/* packages/react-pdf-js-viewer/src/style.css */
+@import 'pdfjs-dist/web/pdf_viewer.css';
 
-/* Import the PDF.js base styles */
-/* @import 'pdfjs-dist/web/pdf_viewer.css'; */
-
-/* Import your component styles */
 @import './css/CustomPdfViewer.css';
 @import './css/PdfToolbar.css';
